[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = { git = "https://github.com/buttplugio/buttplug.git" }
tokio = { version = "1.21.2", features = ["sync", "macros", "io-util"] }
futures = "0.3.25"
futures-util = "0.3.25"
lazy_static = "1.4.0"
rand = { git = "https://github.com/rust-random/rand.git" } 
time = { version = "0.2", feature = "std"}